@@ -1,3 +1,9 @@
+Mon Oct 06 00:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvButton.cpp:
+	  - The icons in the conversations drop-down menu now show buddy
+	    status.
+
 Mon Oct 06 00:38:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
